dist/1.0/bin/sample/retrieveUnpackaged/objects/Other_cost__c.object
<CustomObject>
    <fields>
        <fullName>ACC_Account__c</fullName>
        <label>ACC_Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Other Costs Account</relationshipLabel>
        <relationshipName>Other_Costs2Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC__c</fullName>
        <label>ACC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abbr__c</fullName>
        <label>Abbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accrual_account__c</fullName>
        <label>Accrual account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approach_discount__c</fullName>
        <label>Approach discount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approach_per_km__c</fullName>
        <label>Approach per km</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>Business Unit</description>
        <inlineHelpText>Business Unit</inlineHelpText>
        <label>BU</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandwitch__c</fullName>
        <label>Bandwidth</label>
        <picklist>
            <picklistValues>
                <fullName>1 Gbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 GB/ps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1024 kbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128 kbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,5 G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2048 kbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>256 kbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Mbit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4096 kbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>512 kbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64 kbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Mbit/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADSL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CID__c</fullName>
        <label>CID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments2__c</fullName>
        <label>Comments2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_name__c</fullName>
        <label>Company name</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Energis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Polska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Components2__c</fullName>
        <label>Components2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <label>Components</label>
        <picklist>
            <picklistValues>
                <fullName>IDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Account__c</fullName>
        <label>Cost Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Subtype__c</fullName>
        <label>Cost Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obtained Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2/rok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4/rok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8/rok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/dzień</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/tydz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/rok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zlecenie</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Signing__c</fullName>
        <label>Date of Signing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_ID__c</fullName>
        <label>Document ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Element_ID__c</fullName>
        <label>Element ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Service__c</fullName>
        <label>End of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_CUR__c</fullName>
        <label>Fee CUR</label>
        <picklist>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Owner__c</fullName>
        <label>Financial Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Other_costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frame_Agreement__c</fullName>
        <label>Frame  Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Stała opieka serwisowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dzierżawa centrali na rok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dzierżawa centrali na 2 lata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dzierżawa centrali na 3 lata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brak opieki serwisowej centrali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indywidualny serwis centrali</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoiced_until__c</fullName>
        <label>Invoiced until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KAM__c</fullName>
        <label>KAM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length (km)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_ID__c</fullName>
        <label>Link ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOR_Account__c</fullName>
        <label>MOR Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_elements__c</fullName>
        <label>Number of elements</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numeration_Scope__c</fullName>
        <label>Numeration Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Off_Fee_CUR__c</fullName>
        <label>One Off Fee CUR</label>
        <picklist>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>One_Off_Fee_Date__c</fullName>
        <label>One Off Fee Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>One_Off_Fee__c</fullName>
        <label>One Off Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Customer__c</fullName>
        <label>Our Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param1__c</fullName>
        <label>Reaction time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param2__c</fullName>
        <label>Recovery Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Start_of_Service__c</fullName>
        <label>Planned Start of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_per_element__c</fullName>
        <label>Price per element</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <label>Producer</label>
        <picklist>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLICAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panasonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aastra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nortel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kapsch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telrad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenovis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mikrotel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product (GTS Code)</description>
        <inlineHelpText>Product (GTS Code)</inlineHelpText>
        <label>Product</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Warszawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piaseczno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gdańsk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Katowice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Szczecin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poznań</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Łódź</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrocław</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kraków</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repair_discount__c</fullName>
        <label>Repair discount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_holiday__c</fullName>
        <label>Repair holiday</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_weekday__c</fullName>
        <label>Repair weekday</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_A_node2__c</fullName>
        <label>Site A (node)2</label>
        <referenceTo>Site_A_B__c</referenceTo>
        <relationshipLabel>Other Costs Site A</relationshipLabel>
        <relationshipName>Other_Costs2SiteA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_A_node__c</fullName>
        <label>Site A (node)</label>
        <picklist>
            <picklistValues>
                <fullName>ANDRYCHOW/U04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANINO/U02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIALA PODLAS/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIALYSTOK/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIALYSTOK/V25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIALYSTOK/V83</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIELSKO BIAL/AA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIELSKO BIAL/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIELSKO BIAL/NC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/NC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/NC3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/NC4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/UG5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/VJ8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/Y01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHELM/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHORZOW/NC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHORZOW/U14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIECHANOW/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIESZYN/U13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZESTOCHOWA/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZESTOCHOWA/NC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZUDEC/U03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELBLAG/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GADKIPOZ/U22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/L55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/NC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/NC3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/V96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/VP4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_B_Customer2__c</fullName>
        <label>Site B (Customer)2</label>
        <referenceTo>Site_A_B__c</referenceTo>
        <relationshipLabel>Other Costs Site B</relationshipLabel>
        <relationshipName>Other_Costs2SiteB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_B_Customer__c</fullName>
        <label>Site B (Customer)</label>
        <picklist>
            <picklistValues>
                <fullName>BIALA PODLAS/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIALYSTOK/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIALYSTOK/V31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIELSKO BIAL/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIELSKO BIAL/U56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIELSKO BIAL/U85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIELSKO BIAL/V18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/CD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/CT1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/W41</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/WA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/WA9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDGOSZCZ/Y01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHELM/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHORZOW/CD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHORZOW/U02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIECHANOW/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIESZYN/W12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZERWIONKA L/U39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZESTOCHOWA/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZESTOCHOWA/WG9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZESTOCHOWA/WH5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELBLAG/CZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/CD3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/CT1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/LAW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/NC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/U21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/U79</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDANSK/U9T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_of_Service_from_Protocol__c</fullName>
        <label>Start of Service from Protocol</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary_Fee__c</fullName>
        <formula>IF(OR(Price_per_element__c * Number_of_elements__c=0,ISNULL(Price_per_element__c * Number_of_elements__c)) , Fee__c,Price_per_element__c * Number_of_elements__c)</formula>
        <label>Summary Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Payment__c</fullName>
        <label>Type Of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Annualy Fee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Half of the Year Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quatrely Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Cost__c</fullName>
        <label>Type of Cost</label>
        <picklist>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR/TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CROT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRBSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNBSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_Medium__c</fullName>
        <label>Type of Service/Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Abonament telefoniczny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air conditioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISDN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITC SIP TRUNK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Konekt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring/security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLR/1066</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDS PSI ort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OVFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Contract__c</fullName>
        <label>Vendor Contract</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Other costs (Vendor Contract)</relationshipLabel>
        <relationshipName>Other_costs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice__c</fullName>
        <label>Vendor Invoice</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Other costs(Invoice)</relationshipLabel>
        <relationshipName>Other_costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Other cost</label>
    <listViews>
        <fullName>JK_view_all</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Document_ID__c</columns>
        <columns>Company_name__c</columns>
        <columns>Type_of_Cost__c</columns>
        <columns>Active__c</columns>
        <columns>Start_of_Service_from_Protocol__c</columns>
        <columns>Vendor_Contract__c</columns>
        <columns>Comments__c</columns>
        <columns>Comments2__c</columns>
        <columns>Type_Of_Payment__c</columns>
        <columns>Fee__c</columns>
        <columns>Fee_CUR__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>End_of_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor_Contract__c</field>
            <operation>contains</operation>
            <value>Eone</value>
        </filters>
        <label>JK_view_all</label>
    </listViews>
    <listViews>
        <fullName>o11062</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>o11062</label>
    </listViews>
    <listViews>
        <fullName>serwisy</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Contract__c</columns>
        <columns>Type_of_Cost__c</columns>
        <columns>Cost_Account__c</columns>
        <columns>Active__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>BU__c</columns>
        <columns>Product__c</columns>
        <columns>Type_Of_Payment__c</columns>
        <columns>Fee__c</columns>
        <columns>Fee_CUR__c</columns>
        <columns>Planned_Start_of_Service__c</columns>
        <columns>Start_of_Service_from_Protocol__c</columns>
        <columns>End_of_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>O11062</value>
        </filters>
        <label>serwisy</label>
    </listViews>
    <nameField>
        <displayFormat>O{00000}</displayFormat>
        <label>Nextno</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other costs</pluralLabel>
    <recordTypes>
        <fullName>Bitstream_BN</fullName>
        <active>true</active>
        <description>Bitstream BN</description>
        <label>Bitstream BN</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bitstream_CR</fullName>
        <active>true</active>
        <description>Bitstream CR</description>
        <label>Bitstream CR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Support</fullName>
        <active>true</active>
        <description>Customer Support</description>
        <label>Customer Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Domains</fullName>
        <active>true</active>
        <description>Domains of operator</description>
        <label>Domains</label>
    </recordTypes>
</CustomObject>